@@ -1,3 +1,9 @@
+2013-06-07  Jesse  <jesse.emond@hotmail.com>
+
+	* GameMatch.cs:
+	* ServerCommand.cs:
+	* ClientCommand.cs: 
+
 2013-06-06  Jesse  <jesse.emond@hotmail.com>
 
 	* GameMatch.cs:
