@@ -1,3 +1,7 @@
+2013-06-07  Jesse  <jesse.emond@hotmail.com>
+
+	* ServerGame.cs: 
+
 2013-06-06  Jesse  <jesse.emond@hotmail.com>
 
 	* Server.cs:
