@@ -1,3 +1,9 @@
+2013-06-07  Jesse  <jesse.emond@hotmail.com>
+
+	* Client.cs:
+	* GameplayScreen.cs:
+	* DrawableChampion.cs: 
+
 2013-06-06  Jesse  <jesse.emond@hotmail.com>
 
 	* Game1.cs:
